@@ -1,3 +1,7 @@
+2013-05-05 Max Baak <mbaak@cern.ch>
+	M       configManager.py
+	* Fix: remapping of overall systematics was broken in the trunk
+
 2013-04-24 Max Baak <mbaak@cern.ch>
 	M       Utils.cxx
 	M       src/HypoTestTool.cxx
